Prior and next keys

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,8 @@ set-window-option -g xterm-keys on
 set -g prefix C-space
 bind C-space send-prefix
 bind r command-prompt "rename-window '%%'"
+bind -n C-S-Pageup select-window -p
+bind -n C-S-Pagedown select-window -n
 
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
