tmux session switching

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ set-window-option -g xterm-keys on
 set -g prefix C-space
 bind C-space send-prefix
 bind r command-prompt "rename-window '%%'"
+bind s choose-session
 
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
