--- a/.xsessionrc
+++ b/.xsessionrc
@@ -1,4 +1,5 @@
-xcape -t 200 -e "Caps_Lock=Escape;Shift_L=Shift_L|parenleft;Shift_R=Shift_R|parenright"
+xkbcomp $HOME/keyboard.xkb $DISPLAY
+xcape -t 200 -e "Caps_Lock=Escape;Shift_L=Shift_L|parenleft;Shift_R=Shift_R|parenright;Control_L=space"
 xinput set-prop "Kensington Kensington Slimblade Trackball" "Evdev Wheel Emulation" 1
 xinput set-prop "Kensington Kensington Slimblade Trackball" "Evdev Wheel Emulation Button" 8
 xinput set-prop "Kensington Kensington Slimblade Trackball" "Evdev Wheel Emulation Axes" 6 7 4 5
