--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,8 +9,11 @@ set -g prefix C-space
 bind C-space send-prefix
 bind r command-prompt "rename-window '%%'"
 bind s choose-session
-bind -n C-S-Pageup select-window -p
-bind -n C-S-Pagedown select-window -n
+bind -n C-S-pageup select-window -p
+bind -n C-S-pagedown select-window -n
+
+bind -t vi-copy MouseDragEnd1Pane copy-pipe "xsel --input"
+bind -t vi-copy Enter copy-pipe "xsel --input"
 
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
@@ -45,3 +48,4 @@ set-window-option -g window-status-current-bg blue
 
 set-window-option -g window-style 'bg=#222222'
 set-window-option -g window-active-style 'bg=black'
+
