Update config for new tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,8 +12,7 @@ bind s choose-session
 bind -n C-S-pageup select-window -p
 bind -n C-S-pagedown select-window -n
 
-bind -t vi-copy MouseDragEnd1Pane copy-pipe "xsel --input"
-bind -t vi-copy Enter copy-pipe "xsel --input"
+bind -Tcopy-mode-vi Enter send -X copy-pipe-and-cancel "xsel --input"
 
 bind -n M-1 select-window -t 1
 bind -n M-2 select-window -t 2
