more tmux updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,15 +35,12 @@ set-window-option -g status-bg black
 
 set-window-option -g status-left-length 20
 set-window-option -g status-left " #S #[fg=yellow,bg=black]"
-set-window-option -g status-left-fg black
-set-window-option -g status-left-bg yellow
+set-window-option -g status-left-style fg=black,bg=yellow
 
 set-window-option -g window-status-format " #I: #W "
-set-window-option -g window-status-fg colour255
-set-window-option -g window-status-bg black
+set-window-option -g window-status-style fg=colour255,bg=black
 set-window-option -g window-status-current-format " #I: #W "
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg blue
+set-window-option -g window-status-current-style fg=black,bg=blue
 
 set-window-option -g window-style 'bg=#222222'
 set-window-option -g window-active-style 'bg=black'
