--- a/.xsessionrc
+++ b/.xsessionrc
@@ -1,6 +1,5 @@
 xcape -t 200 -e "Caps_Lock=Escape;Shift_L=Shift_L|parenleft;Shift_R=Shift_R|parenright"
-xinput set-prop "Kensington Kensington Slimblade Trackball" "Evdev Wheel Emulation" 1
-xinput set-prop "Kensington Kensington Slimblade Trackball" "Evdev Wheel Emulation Button" 8
-xinput set-prop "Kensington Kensington Slimblade Trackball" "Evdev Wheel Emulation Axes" 6 7 4 5
+xinput set-prop "Kensington Kensington Slimblade Trackball" "libinput Scroll Method Enabled" 0 0 1
+xinput set-prop "Kensington Kensington Slimblade Trackball" "libinput Button Scrolling Button" 8
+xinput set-prop "Kensington Kensington Slimblade Trackball" "libinput Accel Speed" 0.3
 xinput set-button-map "Kensington Kensington Slimblade Trackball" 1 8 3 4 5 6 7 2
-synclient TouchpadOff=1
