--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 bind R source-file ~/.tmux.conf
 set -sg escape-time 0
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set -as terminal-features ",alacritty:RGB"
+
 set -g mouse on
 set-option -g renumber-windows on
 set-window-option -g xterm-keys on
