--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 bind R source-file ~/.tmux.conf
 set -sg escape-time 0
 set -g default-terminal "tmux-256color"
-set -as terminal-features ",alacritty:RGB"
+set -as terminal-features ",alacritty:RGB:usstyle"
 
 set -g mouse on
 set-option -g renumber-windows on
