--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -5,6 +5,7 @@ cursorline = true
 rulers = [80]
 color-modes = true
 bufferline = "multiple"
+true-color = true
 
 [editor.statusline]
 left = ["mode", "separator", "file-type", "diagnostics"]
