--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,7 +3,8 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-font pango:monospace 8
+font pango:monospace 5
+default_border normal 1
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
