--- a/.global/etc/interception/dual-function-keys.yaml
+++ b/.global/etc/interception/dual-function-keys.yaml
@@ -1,9 +1,13 @@
+TIMING:
+  TAP_MILLISET: 200
+  DOUBLE_TAP_MILLISEC: 0
+
 MAPPINGS:
   - KEY: KEY_LEFTSHIFT
-    TAP: KEY_KPLEFTPAREN
+    TAP: [KEY_LEFTSHIFT, KEY_9]
     HOLD: KEY_LEFTSHIFT
   - KEY: KEY_RIGHTSHIFT
-    TAP: KEY_KPRIGHTPAREN
+    TAP: [KEY_LEFTSHIFT, KEY_0]
     HOLD: KEY_RIGHTSHIFT
   - KEY: KEY_CAPSLOCK
     TAP: KEY_ESC
