--- a/.global/etc/interception/udevmon.d/dual-function.yaml
+++ b/.global/etc/interception/udevmon.d/dual-function.yaml
@@ -1,4 +1,4 @@
-- JOB: "intercept -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys.yaml | uinput -d $DEVNODE"
+- JOB: "interception -g $DEVNODE | dual-function-keys -c /etc/interception/dual-function-keys.yaml | uinput -d $DEVNODE"
   DEVICE:
     EVENTS:
-      EV_KEY: [[KEY_KPLEFTPAREN, KEY_KPRIGHTPAREN]]
+      EV_KEY: [[KEY_LEFTSHIFT]]
