Various misc stuff:

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,11 @@
 monitor=,preferred,auto,auto
-
+monitor=desc:Google Inc. P2718EC C8030177,preferred,auto,1,transform,1
 
 # Execute your favorite apps at launch
-exec-once = waybar & swayidle & swaybg -i ~/Pictures/bg.jpg & wl-paste --type text --watch cliphist store
+exec-once = waybar
+exec-once = swayidle
+exec-once = ~/bin/background.sh
+exec-once = wl-paste --type text --watch cliphist store
 
 # Set programs that you use
 $terminal = foot
@@ -15,6 +18,7 @@ input {
     kb_variant = dvorak
     kb_file = ~/keyboard.xkb
     follow_mouse = 1
+    scroll_method = on_button_down
 }
 
 general {
@@ -37,7 +41,7 @@ decoration {
         special = true
     }
     dim_inactive = true
-    dim_strength = 0.25
+    dim_strength = 0.1
 
     dim_special = 0.75
     dim_around = 0.75
@@ -96,6 +100,8 @@ bind = $mod SHIFT, Q, exit,
 bind = $mod SHIFT, L, exec, $lock
 bind = $mod SHIFT, I, exec, ~/bin/screenshot
 bind = $mod, V, exec, cliphist list | $dmenu | cliphist decode | wl-copy
+bind = $mod, Z, exec, dunstctl close
+bind = $mod SHIFT, Z, exec, dunstctl history-pop
 
 bind = $mod, F, togglefloating, 
 bind = $mod, D, exec, $menu
