--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -7,3 +7,6 @@ inside-ver-color=aaaaaa88
 text-ver-color=00000000
 text-clear-color=00000000
 text-wrong-color=00000000
+
+image=DP-1:~/Pictures/bg2.jpg
+image=DP-2:~/Pictures/bg.jpg
