--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,9 +1,9 @@
 {
     "layer": "top",
     "position": "bottom",
-    "modules-left": ["hyprland/workspaces"],
+    "modules-right": ["hyprland/workspaces"],
     "modules-center": ["hyprland/window"],
-    "modules-right": ["custom/gcert", "battery", "clock"],
+    "modules-left": ["clock", "battery", "custom/gcert"],
     "margin-top": 1,
     "sway/window": {
         "max-length": 50
@@ -26,6 +26,8 @@
         "format": "gcert: {}",
     },
     "hyprland/workspaces": {
-     /* "show-special": true,*/
+      "ignore-workspaces": ["web"],
+      "all-outputs": true,
+      "format": "{icon}",
     }
 }
