--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,15 +1,31 @@
+$primon=DP-2
+$secmon=DP-1
+
 monitor=,preferred,auto,auto
-monitor=desc:Google Inc. P2718EC C8030177,preferred,auto,1,transform,1
+monitor=desc:Google Inc. P2718EC C8030177,2560x1440,-1440x0,1,transform,1
+
+workspace=10,defaultName:web,persistent:1,monitor:$secmon
+workspace=1,monitor:$primon
+workspace=2,monitor:$primon
+workspace=3,monitor:$primon
+workspace=4,monitor:$primon
+workspace=5,monitor:$primon
+workspace=6,monitor:$primon
+workspace=7,monitor:$primon
+workspace=8,monitor:$primon
+workspace=9,monitor:$primon
+exec-once=[workspace 10] google-chrome
+exec-once=[workspace 1] foot tmux new-session -As main
 
 # Execute your favorite apps at launch
 exec-once = waybar
 exec-once = swayidle
 exec-once = ~/bin/background.sh
 exec-once = wl-paste --type text --watch cliphist store
+exec-once = dunst
 
 # Set programs that you use
 $terminal = foot
-$menu = wofi --show=drun
 $dmenu = wofi --show=dmenu
 $lock = swaylock
 
@@ -100,11 +116,13 @@ bind = $mod SHIFT, Q, exit,
 bind = $mod SHIFT, L, exec, $lock
 bind = $mod SHIFT, I, exec, ~/bin/screenshot
 bind = $mod, V, exec, cliphist list | $dmenu | cliphist decode | wl-copy
+bind = $mod, minus, exec, dunstctl action; dunstctl close
 bind = $mod, Z, exec, dunstctl close
 bind = $mod SHIFT, Z, exec, dunstctl history-pop
 
 bind = $mod, F, togglefloating, 
-bind = $mod, D, exec, $menu
+bind = $mod, D, exec, wofi --show=drun
+bind = $mod SHIFT, D, exec, wofi --show=run
 bind = $mod, P, pseudo, # dwindle
 bind = $mod, J, togglesplit, # dwindle
 
