--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,7 +1,8 @@
 font=monospace:size=9
-line-height=11
+line-height=12
 dpi-aware=yes
 pad=2x2
+underline-offset=2px
 
 [colors]
 background=181818
@@ -9,6 +10,9 @@ regular0=181818
 foreground=a0a0a0
 regular7=a0a0a0
 bright7=ffffff
+
+[mouse]
+hide-while-typing=yes
 
 [url]
 label-letters=etuhonasid
