--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,8 +1,9 @@
 font=monospace:size=9
 line-height=12
-dpi-aware=yes
+dpi-aware=no
 pad=2x2
 underline-offset=2px
+bold-text-in-bright=yes
 
 [colors]
 background=181818
@@ -19,3 +20,5 @@ label-letters=etuhonasid
 
 [key-bindings]
 show-urls-launch=Mod1+u
+
+[tweak]
